== 24/Aug/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b63.zip V1.6-b63]  ==

''' Models '''

Added to ReturnWrapper addFlashCommand versions that accept a String for the display name rather than the device object. 
The device object is always preferable as it contains other information as well, however the string versions can be used when an underlying
device is not present. Enhancement [ticket:649]

Groovy models can now be packaged in jar files. The full path must be present to the package.
For example to create a jar file from the a groovy  au.com.BI.models.template change directory to the models directory then 
{{{
      jar cf template.jar au/com/BI/models/template.groovy
}}}
Enhancement [ticket:648]

== 24/Aug/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b62.zip V1.6-b62]  ==

''' General '''

Added the ability for models to add custom attributes to device lines in the configuration files.

{{{
   For example to expect lights to have an attribute called UNIT include this method in your model.
   
   void finishedReadingModelParameters() {
	    addStringAttribute (DeviceType.Light, "UNIT" )
	}
	
}}}

To access these attributes call
{{{	
	getAttributeValue (name)  
}}}

This method throws an au.com.BI.Device.UnknownFieldException if you request a field that has not been added.
Resolves [ticket:644],[ticket:643]

Added more detailed exception reporting for configuration file loading failures and for communication failures.
Ensured groovy models go through the same startup procedures as ordinary models.

== 4/Jul/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b61.zip V1.6-b61]  ==

''' Nuvo '''

Simple Grand Concerto support added.
The protocol should be set in the parameters; the default if this is not present is to use the Essentia protocol.

<ITEM NAME="PROTOCOL" VALUE="GC"/>

Groups and joined zones are not directly supported, however status updates should ensure all zones are correctly displayed.
