@@ -2,7 +2,7 @@
         <DESC>The BI demonstration CBUS system</DESC>
  
         !-- ______________________________________  RAKO DEFS  ____________________  -->
-        <DEVICE ACTIVE="Y" DEVICE_TYPE="RAKO" DESCRIPTION="Rako Lights">
+        <DEVICE ACTIVE="N" DEVICE_TYPE="RAKO" DESCRIPTION="Rako Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="RTSCTS" />
