@@ -2,13 +2,13 @@
         <DESC>The BI demonstration CBUS system</DESC>
  
         !-- ______________________________________  CBUS DEFS  ____________________  -->
-        <DEVICE ACTIVE="N" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
+        <DEVICE ACTIVE="Y" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="RTSCTS" />
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4999"/>
-                        <IP ACTIVE="Y" IP_ADDRESS="192.168.1.6" PORT="10001"/>
-                        <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5004"/>
+                        <IP ACTIVE="N" IP_ADDRESS="192.168.1.6" PORT="10001"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5004"/>
                 </CONNECTION>
                 
                 <PARAMETERS>
