@@ -1,3 +1,12 @@
+== 2/Sep/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b64.zip V1.6-b64]  ==
+
+''' Groovy models '''
+
+Clear groovy model list between loading jar and groovy source versions; solves the system attempting to register jar models twice. Ticket [ticket:650]
+
+Added a method to add commands that appear to have come from Flash injectCommand (...), the same parameters as addFlashCommand are used.
+Do not use this method to send a command configured in the model to process when sent from Flash; otherwise a loop will result. Ticket [ticket:652]
+
 == 24/Aug/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b63.zip V1.6-b63]  ==
 
 ''' Models '''
